--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "@bcgov/nrdk",
   "description": "NR Developer/Deployment Kit",
-  "version": "0.1.0-rc.28",
+  "version": "0.1.0-rc.40",
   "author": "Clecio Varjao",
   "bin": {
     "nrdk": "./bin/run"
   },
   "bugs": "https://github.com/bcdevops/nrdk/issues",
   "dependencies": {
-    "@bcgov/pipeline-cli": "git+https://github.com/BCDevOps/pipeline-cli.git#release/v1.1",
+    "@bcgov/nr-pipeline-ext": "0.1.0-rc.9",
+    "@bcgov/pipeline-cli": "^1.0.1-2",
     "@oclif/command": "^1.8.0",
     "@oclif/plugin-help": "^3.2.0",
     "@types/rsync": "^0.4.30",
     "isomorphic-git": "^1.7.6",
     "lodash.merge": "^4.6.2",
-    "nr-pipeline-ext": "git+https://github.com/BCDevOps/nr-pipeline-ext.git#release/0.0.1",
     "rsync": "^0.6.1",
     "safe-buffer": "^5.2.1",
     "shelljs": "^0.8.4",
@@ -68,7 +68,7 @@
     ],
     "repositoryPrefix": "./<%- commandPath %>"
   },
-  "repository": "bcdevops/nrdk",
+  "repository": "https://github.com/bcdevops/nrdk",
   "scripts": {
     "build": "tsc -b",
     "postpack": "rm -f oclif.manifest.json",
@@ -80,7 +80,8 @@
     "version": "oclif-dev readme && git add README.md",
     "oclif": "oclif",
     "link": "npm link nr-pipeline-ext && npm link @bcgov/pipeline-cli",
-    "prerelease": "npm --no-git-tag-version version prerelease && npm publish"
+    "publish:latest": "npm --no-git-tag-version version prerelease && npm publish --tag latest",
+    "publish:alpha": "npm --no-git-tag-version version prerelease && npm publish --tag alpha"
   },
   "types": "lib/index.d.ts",
   "bundleDependencies": [
@@ -88,7 +89,7 @@
     "@oclif/plugin-help",
     "@types/rsync",
     "isomorphic-git",
-    "nr-pipeline-ext",
+    "@bcgov/nr-pipeline-ext",
     "rsync",
     "tar",
     "winston",
